--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "geist": "^1.3.0",
     "graphql": "^16.8.2",
     "lucide-react": "^0.378.0",
+    "motion": "^12.23.12",
     "next": "15.4.4",
     "next-sitemap": "^4.2.3",
     "payload": "3.54.0",
@@ -53,6 +54,7 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "7.45.4",
+    "react-use-measure": "^2.1.7",
     "sharp": "0.34.2",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7"
