--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@payloadcms/richtext-lexical": "3.54.0",
     "@payloadcms/translations": "^3.54.0",
     "@payloadcms/ui": "3.54.0",
+    "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-select": "^2.0.0",
@@ -45,7 +46,7 @@
     "dotenv": "16.4.7",
     "geist": "^1.3.0",
     "graphql": "^16.8.2",
-    "lucide-react": "^0.378.0",
+    "lucide-react": "^0.542.0",
     "motion": "^12.23.12",
     "next": "15.4.4",
     "next-sitemap": "^4.2.3",
