--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@payloadcms/plugin-search": "3.54.0",
     "@payloadcms/plugin-seo": "3.54.0",
     "@payloadcms/richtext-lexical": "3.54.0",
+    "@payloadcms/storage-s3": "^3.54.0",
     "@payloadcms/translations": "^3.54.0",
     "@payloadcms/ui": "3.54.0",
     "@radix-ui/react-accordion": "^1.2.12",
