--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "react-hook-form": "7.45.4",
     "react-use-measure": "^2.1.7",
     "sharp": "0.34.2",
+    "slugify": "^1.6.6",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^11.1.0"
